# aapt

./: .cproject  .project  Android.mk  CMakeCache.txt  CMakeLists.txt  Makefile  NameFactory.h  Resource.cpp  cleanCMake.sh  diff.sh  local.sh
include/: include_path.txt
include/libpng/: png.h
include/log/: uio.h
include/utils/: Endian.h
src/: AaptAssets.cpp  AaptAssets.h  CrunchCache.h  Images.cpp  NameMakerCpp.cpp  ResourceIdCache.h  SimpleNameFactory.cpp  SimpleNameFactory.h  XMLNode.h  ZipFile.cpp  copy.sh  printapk.cpp
src_org/: aapt.1.patch
