cmake_minimum_required(VERSION 3.6)
IF (WIN32)  
    MESSAGE(STATUS "Now is windows")  
ELSEIF (APPLE)  
    MESSAGE(FATAL_ERROR "Now is Apple systens. Please use CentOS to build this project, because the Xcode SDK not compatibled.")  
ELSEIF (UNIX)  
    MESSAGE(STATUS "Now is UNIX-like OS's. Including aPPLE os x  and CygWin")  
ENDIF ()

project(AAPT)
MESSAGE("配置项目变量")
set(DIR_BASE				.)
set(DIR_SRC					${DIR_BASE}/src)
set(DIR_LIB					${DIR_BASE}/lib)
set(DIR_INC					${DIR_BASE}/include)
set(DIR_BUILD				${DIR_BASE}/build)

set(EXECUTABLE_OUTPUT_PATH	${DIR_BASE}/out)

MESSAGE("配置编译选项和环境变量")
set(CMAKE_ROOT						"${DIR_BASE}")
set(CMAKE_CXX_COMPILER				"c++")
set(CMAKE_CXX_FLAGS					"${CMAKE_CXX_FLAGS}")
set(CMAKE_CXX_FLAGS_DEBUG			"${CMAKE_CXX_FLAGS_DEBUG} -g")
set(CMAKE_CXX_FLAGS_MINSIZEREL		"${CMAKE_CXX_FLAGS_MINSIZEREL} -Os -DNDEBUG")
set(CMAKE_CXX_FLAGS_RELEASE			"${CMAKE_CXX_FLAGS_RELEASE} -O3 -DNDEBUG")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO	"${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -O2 -g -DNDEBUG")
add_definitions(-D_FILE_OFFSET_BITS=64)

include_directories(				${DIR_INC})
link_directories(					${DIR_LIB})
aux_source_directory(${DIR_SRC} 	APP_SRC)
add_executable(aapt 				${APP_SRC})
MESSAGE("build/Makefile生成完毕")
